--- a/templates/first_temp.html
+++ b/templates/first_temp.html
@@ -9,6 +9,9 @@
 </head>
 <body>
     <h1>This is my first template!</h1>
-    <h2>{{ data }}</h2>
+
+    {% for book in books %}
+        <h2>{{ book.title }}</h2>
+    {% endfor %}
 </body>
 </html>
