--- a/templates/first_temp.html
+++ b/templates/first_temp.html
@@ -11,7 +11,9 @@
     <h1>This is my first template!</h1>
 
     {% for book in books %}
-        <h2>{{ book.title }}</h2>
+        {% if book.is_published %}
+            <h2>{{ book.title }}</h2>
+        {% endif %}
     {% endfor %}
 </body>
 </html>
